# utter

./: .gitignore  CMakeLists.txt  README.md  compile.sh
cmake/: googletest.cmake
example/: unit_test.cpp
src/StringMatching/: ahocorasick.cc  ahocorasick.h
src/TemplateEngine/: ahocorasick.cc  ahocorasick.h  inverted_index.cc  inverted_index.h  template_parse.cc  template_parse.h
src/common/: common.cc  common.h  normalize.h
src/utf8/: checked.h
tests/: CMakeLists.txt  string_match_test.cc
